[DTSSTCI-578] Update wa.preview config, add missing databases

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -585,9 +585,8 @@ postgres:
 
       - name: "pr-${CHANGE_ID}-camunda"
       - name: "pr-${CHANGE_ID}-cft_task_db"
-#      - name: "pr-${CHANGE_ID}-wa-task-management-api"
-#      - name: "pr-${CHANGE_ID}-wa-case-event-handler"
-#      - name: "pr-${CHANGE_ID}-wa_workflow_api"
+      - name: "pr-${CHANGE_ID}-wa_workflow_api"
+      - name: "pr-${CHANGE_ID}-wa-case-event-handler"
 
 wa:
   enabled: true
