[DTSSTCI-578] Add postgres chart

--- a/charts/sptribs-case-api/Chart.yaml
+++ b/charts/sptribs-case-api/Chart.yaml
@@ -55,4 +55,8 @@ dependencies:
   - name: servicebus
     version: ~1.0.4
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
-    condition: wa.enabled
+    condition: servicebus.enabled
+  - name: postgresql
+    version: ~1.0.2
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: postgres.enabled
