--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -595,6 +595,7 @@ wa:
     postgresSecret: postgres
     postgresHost: sptribs-preview.postgres.database.azure.com
     databaseNamePrefix: "pr-${CHANGE_ID}-"
+
   wa-case-event-handler:
     java:
       secrets:
@@ -613,6 +614,31 @@ wa:
           secrets:
             - name: app-insights-connection-string
               alias: app-insights-connection-string
+
+    wa-task-management-api:
+      java:
+        keyVaults:
+          wa:
+            secrets:
+              - name: app-insights-connection-string
+                alias: app-insights-connection-string
+
+    wa-workflow-api:
+      java:
+        keyVaults:
+          wa:
+            secrets:
+              - name: app-insights-connection-string
+                alias: app-insights-connection-string
+
+    camunda:
+      java:
+        keyVaults:
+          camunda:
+            secrets:
+              - name: app-insights-connection-string
+                alias: app-insights-connection-string
+
   #disable wa db as we are using the postgres flexible server
   wa:
     postgresql:
