[DTSSTCI-578] Add missing references to wa app-insights secret

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -615,29 +615,29 @@ wa:
             - name: app-insights-connection-string
               alias: app-insights-connection-string
 
-    wa-task-management-api:
-      java:
-        keyVaults:
-          wa:
-            secrets:
-              - name: app-insights-connection-string
-                alias: app-insights-connection-string
+  wa-task-management-api:
+    java:
+      keyVaults:
+        wa:
+          secrets:
+            - name: app-insights-connection-string
+              alias: app-insights-connection-string
 
-    wa-workflow-api:
-      java:
-        keyVaults:
-          wa:
-            secrets:
-              - name: app-insights-connection-string
-                alias: app-insights-connection-string
+  wa-workflow-api:
+    java:
+      keyVaults:
+        wa:
+          secrets:
+            - name: app-insights-connection-string
+              alias: app-insights-connection-string
 
-    camunda:
-      java:
-        keyVaults:
-          camunda:
-            secrets:
-              - name: app-insights-connection-string
-                alias: app-insights-connection-string
+  camunda-bpm:
+    java:
+      keyVaults:
+        camunda:
+          secrets:
+            - name: app-insights-connection-string
+              alias: app-insights-connection-string
 
   #disable wa db as we are using the postgres flexible server
   wa:
