[DTSSTCI-578] update postgresql chart condition and database config in wa.preview

--- a/charts/sptribs-case-api/Chart.yaml
+++ b/charts/sptribs-case-api/Chart.yaml
@@ -59,4 +59,4 @@ dependencies:
   - name: postgresql
     version: ~1.0.2
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
-    condition: postgres.enabled
+    condition: postgresql.enabled
