[DTSSTCI-578] Update wa-workflow-api secrets

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -68,6 +68,10 @@ wa:
           secrets:
             - name: app-insights-connection-string
               alias: app-insights-connection-string
+            - name: workflow-api-POSTGRES-PASS-V15
+              alias: POSTGRES_PASSWORD
+            - name: workflow-api-POSTGRES-USER-V15
+              alias: POSTGRES_USERNAME
 
   camunda-bpm:
     java:
