--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -63,15 +63,21 @@ wa:
 
   wa-workflow-api:
     java:
+      environment:
+        DB_READER_USERNAME: "hmcts"
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified"
+        CAMUNDA_URL: https://camunda-${SERVICE_FQDN}/engine-rest/
+      secrets:
+        POSTGRES_PASSWORD:
+          secretRef: "{{ .Values.global.postgresSecret }}"
+          key: PASSWORD
+          disabled: true
       keyVaults:
         wa:
           secrets:
             - name: app-insights-connection-string
               alias: app-insights-connection-string
-            - name: workflow-api-POSTGRES-PASS-V15
-              alias: POSTGRES_PASSWORD
-            - name: workflow-api-POSTGRES-USER-V15
-              alias: POSTGRES_USERNAME
 
   camunda-bpm:
     java:
