--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -65,14 +65,14 @@ wa:
     java:
       environment:
         DB_READER_USERNAME: "hmcts"
-        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
-        CAMUNDA_URL: https://camunda-${SERVICE_FQDN}/engine-rest/
-      secrets:
-        POSTGRES_PASSWORD:
-          secretRef: "{{ .Values.global.postgresSecret }}"
-          key: PASSWORD
-          disabled: true
+#        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+#        POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
+#        CAMUNDA_URL: https://camunda-${SERVICE_FQDN}/engine-rest/
+#      secrets:
+#        POSTGRES_PASSWORD:
+#          secretRef: "{{ .Values.global.postgresSecret }}"
+#          key: PASSWORD
+#          disabled: true
       keyVaults:
         wa:
           secrets:
