--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -34,10 +34,6 @@ java:
           alias: IDAM_SYSTEM_UPDATE_PASSWORD
         - name: launchdarkly-sdk-key
           alias: LAUNCH_DARKLY_SDK_KEY
-        - name: ccd-user-profile-db-username-preview
-          alias: CCD_USER_PROFILE_DB_USERNAME_PREVIEW
-        - name: ccd-user-profile-db-password-preview
-          alias: CCD_USER_PROFILE_DB_PASSWORD_PREVIEW
   secrets:
     POSTGRES_PASSWORD:
       secretRef: postgres
@@ -198,13 +194,12 @@ ccd:
         - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
         - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
         - st_super@mailinator.com|ST_CIC|CIC|Submitted
-      userProfileDatabaseHost: ${SERVICE_NAME}-ccd-postgres
+      userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
       userProfileDatabasePort: 5432
-      userProfileDatabaseUser: ${CCD_USER_PROFILE_DB_USERNAME_PREVIEW}
-      userProfileDatabasePassword: ${CCD_USER_PROFILE_DB_PASSWORD_PREVIEW}
-      userProfileDatabaseName: user-profile
-
-
+      userProfileDatabaseUser: hmcts
+      userProfileDatabasePassword: hmcts
+      userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
+  
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
     clusterName: "es"
