--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -105,7 +105,7 @@ ccd:
     postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
     postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
     s2sUrl: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
-    databaseNamePrefix: ""
+    databaseNamePrefix: "pr-${CHANGE_ID}-"
 
   ccd-api-gateway-web:
     nodejs:
