--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -104,7 +104,7 @@ ccd:
     dataStore:
       enabled: false
     adminWeb:
-      enabled: false
+      enabled: true
 
 
   ingressHost: ${SERVICE_FQDN}
