dataStore switched on

--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -102,7 +102,7 @@ ccd:
     definitionStore:
       enabled: false
     dataStore:
-      enabled: false
+      enabled: true
     adminWeb:
       enabled: true
 
