[DTSSTCI-578] Update preview values

--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -63,6 +63,9 @@ ccd:
     dmStoreUrl: http://dm-store-aat.service.core-compute-aat.internal
     ccdAdminWebIngress: admin-web-${SERVICE_FQDN}
     ccdApiGatewayIngress: gateway-${SERVICE_FQDN}
+    ccdDataStoreUrl: http://${SERVICE_NAME}-ccd-data-store-api
+    ccdDefinitionStoreUrl: http://${SERVICE_NAME}-ccd-definition-store
+    ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
     postgresUsername: hmcts
     postgresHostname: "sptribs-preview.postgres.database.azure.com"
     postgresSecret: postgres
@@ -184,21 +187,19 @@ ccd:
         IDAM_ADMIN_WEB_SERVICE_KEY: ${ADMIN_S2S_KEY}
         IDAM_OAUTH2_AW_CLIENT_SECRET: ${ADMIN_WEB_IDAM_SECRET}
 
-  importer:
-    userprofile:
-      enabled: true
-      jurisdictions:
-        - ST_CIC
-      users:
-        - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
-        - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
-        - st_super@mailinator.com|ST_CIC|CIC|Submitted
-      userProfileDatabaseHost: ${SERVICE_NAME}-ccd-postgres
-      userProfileDatabasePort: 5432
-      userProfileDatabaseUser: ${CCD_USER_PROFILE_DB_USERNAME_PREVIEW}
-      userProfileDatabasePassword: ${CCD_USER_PROFILE_DB_PASSWORD_PREVIEW}
-      userProfileDatabaseName: user-profile
-
+  ccd-user-profile-importer:
+    enabled: true
+    jurisdictions:
+      - ST_CIC
+    users:
+      - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
+      - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
+      - st_super@mailinator.com|ST_CIC|CIC|Submitted
+    userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
+    userProfileDatabasePort: 5432
+    userProfileDatabaseUser: hmcts
+    userProfileDatabasePassword: hmcts
+    userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
 
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
@@ -242,9 +243,15 @@ ccd:
     extraVolumes: |
       - name: logstash-lib
         emptyDir: {}
+      - name: database-secret-volume
+        secret:
+          secretName: postgres
     extraVolumeMounts: |
       - name: logstash-lib
         mountPath: /usr/share/logstash/ccd
+      - name: database-secret-volume
+        mountPath: /etc/logstash/secrets
+        readOnly: true
     logstashConfig:
       logstash.yml: |
         http.host: 0.0.0.0
@@ -260,9 +267,9 @@ ccd:
       01_input.conf: |
         input  {
           jdbc {
-            jdbc_connection_string => "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/data-store?stringtype=unspecified"
+            jdbc_connection_string => "jdbc:postgresql://sptribs-preview.postgres.database.azure.com-postgresql:5432/pr-${CHANGE_ID}-data-store?sslmode-require&stringtype=unspecified"
             jdbc_user => "hmcts"
-            jdbc_password => "hmcts"
+            jdbc_password_filepath => "/etc/logstash/secrets/PASSWORD"
             jdbc_validate_connection => true
             jdbc_driver_library => "/usr/share/logstash/ccd/postgresql.jar"
             jdbc_driver_class => "org.postgresql.Driver"
