--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -149,7 +149,10 @@ ccd:
         ROLE_ASSIGNMENT_DB_HOST: sptribs-preview.postgres.database.azure.com
         ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
-      keyVaults: [ ]
+      keyVaults:
+        secrets:
+          - name: app-insights-connection-string
+            alias: app-insights-connection-string
 
   ccd-definition-store-api:
     java:
