--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -63,10 +63,12 @@ ccd:
     dmStoreUrl: http://dm-store-aat.service.core-compute-aat.internal
     ccdAdminWebIngress: admin-web-${SERVICE_FQDN}
     ccdApiGatewayIngress: gateway-${SERVICE_FQDN}
-    ccdDataStoreUrl: http://${SERVICE_NAME}-ccd-data-store-api
-    ccdDefinitionStoreUrl: http://${SERVICE_NAME}-ccd-definition-store
-    ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
-    postgresUsername: hmcts
+#    ccdDataStoreUrl: http://${SERVICE_NAME}-ccd-data-store-api
+#    ccdDefinitionStoreUrl: http://${SERVICE_NAME}-ccd-definition-store
+#    ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
+    postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
+    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
+#    postgresUsername: hmcts
     postgresHostname: "sptribs-preview.postgres.database.azure.com"
     postgresSecret: postgres
     databaseNamePrefix: "pr-${CHANGE_ID}-"
@@ -89,8 +91,11 @@ ccd:
       imagePullPolicy: Always
       environment:
         CASE_DOCUMENT_AM_API_ATTACH_DOCUMENT_ENABLED: true
+#        DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
+        DATA_STORE_DB_USERNAME: ${CCD_DATA_STORE_DB_USERNAME_PREVIEW}
+        DATA_STORE_DB_PASSWORD: ${CCD_DATA_STORE_DB_PASSWORD_PREVIEW}
         DATA_STORE_DB_HOST: sptribs-preview.postgres.database.azure.com
-        DATA_STORE_DB_USERNAME: hmcts
+#        DATA_STORE_DB_USERNAME: hmcts
         DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
         DATA_STORE_IDAM_KEY: ${DATA_STORE_S2S_KEY}
         DATA_STORE_DEFAULT_LOG_LEVEL: info
@@ -110,14 +115,18 @@ ccd:
         IDAM_DATA_STORE_SYSTEM_USER_USERNAME: ${IDAM_DATA_STORE_SYSTEM_USER_USERNAME}
         IDAM_DATA_STORE_SYSTEM_USER_PASSWORD: ${IDAM_DATA_STORE_SYSTEM_USER_PASSWORD}
         ROLE_ASSIGNMENT_URL: http://sptribs-case-api-pr-${CHANGE_ID}-am-role-assignment-service
-      secrets:
-        DATA_STORE_DB_PASSWORD:
-          secretRef: postgres
-          key: PASSWORD
-          disabled: false
+#      secrets:
+#        DATA_STORE_DB_PASSWORD:
+#          secretRef: postgres
+#          key: PASSWORD
+#          disabled: false
       keyVaults:
         ccd:
           secrets:
+            - name: data-store-api-POSTGRES-USER-V15
+              alias: DATA_STORE_DB_USERNAME
+            - name: data-store-api-POSTGRES-PASS-V15
+              alias: DATA_STORE_DB_PASSWORD
             - name: data-store-api-draft-key
               alias: CCD_DRAFT_ENCRYPTION_KEY
             - name: ccd-data-s2s-secret
@@ -150,9 +159,10 @@ ccd:
         ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
       keyVaults:
-        secrets:
-          - name: app-insights-connection-string
-            alias: app-insights-connection-string
+        am:
+          secrets:
+            - name: app-insights-connection-string
+              alias: app-insights-connection-string
 
   ccd-definition-store-api:
     java:
@@ -164,7 +174,11 @@ ccd:
         IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
-      keyVaults: [ ]
+      keyVaults:
+        ccd:
+          secrets:
+            - name: app-insights-connection-string
+              alias: app-insights-connection-string
       ingressHost: ccd-definition-store-${SERVICE_FQDN}
       autoscaling:
         enabled: false
@@ -190,19 +204,34 @@ ccd:
         IDAM_ADMIN_WEB_SERVICE_KEY: ${ADMIN_S2S_KEY}
         IDAM_OAUTH2_AW_CLIENT_SECRET: ${ADMIN_WEB_IDAM_SECRET}
 
-  ccd-user-profile-importer:
-    enabled: true
-    jurisdictions:
-      - ST_CIC
-    users:
-      - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
-      - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
-      - st_super@mailinator.com|ST_CIC|CIC|Submitted
-    userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
-    userProfileDatabasePort: 5432
-    userProfileDatabaseUser: hmcts
-    userProfileDatabasePassword: hmcts
-    userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
+  importer:
+    userprofile:
+      enabled: true
+      jurisdictions:
+        - ST_CIC
+      users:
+        - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
+        - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
+        - st_super@mailinator.com|ST_CIC|CIC|Submitted
+      userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
+      userProfileDatabasePort: 5432
+      userProfileDatabaseUser: ${CCD_USER_PROFILE_DB_USERNAME_PREVIEW}
+      userProfileDatabasePassword: ${CCD_USER_PROFILE_DB_PASSWORD_PREVIEW}
+      userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
+
+#  ccd-user-profile-importer:
+#    enabled: true
+#    jurisdictions:
+#      - ST_CIC
+#    users:
+#      - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
+#      - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
+#      - st_super@mailinator.com|ST_CIC|CIC|Submitted
+#    userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
+#    userProfileDatabasePort: 5432
+#    userProfileDatabaseUser: hmcts
+#    userProfileDatabasePassword: hmcts
+#    userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
 
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
