--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -166,7 +166,7 @@ ccd:
 
   ccd-definition-store-api:
     java:
-      disableKeyVaults: true
+      disableKeyVaults: false
       imagePullPolicy: Always
       environment:
         DEFINITION_STORE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
@@ -193,6 +193,11 @@ ccd:
       enviroment:
         USER_PROFILE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
       ingressHost: ccd-user-profile-api-${SERVICE_FQDN}
+      keyVaults:
+        ccd:
+          secrets:
+            - name: app-insights-connection-string
+              alias: app-insights-connection-string
 
   ccd-admin-web:
     nodejs:
