--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -66,9 +66,9 @@ ccd:
 #    ccdDataStoreUrl: http://${SERVICE_NAME}-ccd-data-store-api
 #    ccdDefinitionStoreUrl: http://${SERVICE_NAME}-ccd-definition-store
 #    ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
-    postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
-    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
-#    postgresUsername: hmcts
+#    postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
+#    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
+    postgresUsername: hmcts
     postgresHostname: "sptribs-preview.postgres.database.azure.com"
     postgresSecret: postgres
     databaseNamePrefix: "pr-${CHANGE_ID}-"
@@ -151,7 +151,7 @@ ccd:
 
   am-role-assignment-service:
     java:
-      disableKeyVaults: true
+      disableKeyVaults: false
       environment:
         CCD_DATA_STORE_URL: http://{{ .Release.Name }}-ccd-data-store-api
         RUN_LD_ON_STARTUP: false
@@ -166,7 +166,7 @@ ccd:
 
   ccd-definition-store-api:
     java:
-      disableKeyVaults: false
+      disableKeyVaults: true
       imagePullPolicy: Always
       environment:
         DEFINITION_STORE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
@@ -174,11 +174,11 @@ ccd:
         IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
-      keyVaults:
-        ccd:
-          secrets:
-            - name: app-insights-connection-string
-              alias: app-insights-connection-string
+#      keyVaults:
+#        ccd:
+#          secrets:
+#            - name: app-insights-connection-string
+#              alias: app-insights-connection-string
       ingressHost: ccd-definition-store-${SERVICE_FQDN}
       autoscaling:
         enabled: false
