--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -68,7 +68,7 @@ ccd:
 #    ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
 #    postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
 #    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
-    postgresUsername: hmcts
+    postgresUsername: ${POSTGRES_USERNAME}
     postgresHostname: "sptribs-preview.postgres.database.azure.com"
     postgresSecret: postgres
     databaseNamePrefix: "pr-${CHANGE_ID}-"
@@ -95,7 +95,7 @@ ccd:
 #        DATA_STORE_DB_USERNAME: ${CCD_DATA_STORE_DB_USERNAME_PREVIEW}
 #        DATA_STORE_DB_PASSWORD: ${CCD_DATA_STORE_DB_PASSWORD_PREVIEW}
         DATA_STORE_DB_HOST: sptribs-preview.postgres.database.azure.com
-        DATA_STORE_DB_USERNAME: hmcts
+        DATA_STORE_DB_USERNAME: ${POSTGRES_USERNAME}
         DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
         DATA_STORE_IDAM_KEY: ${DATA_STORE_S2S_KEY}
         DATA_STORE_DEFAULT_LOG_LEVEL: info
@@ -151,18 +151,15 @@ ccd:
 
   am-role-assignment-service:
     java:
-      disableKeyVaults: false
+      disableKeyVaults: true
       environment:
         CCD_DATA_STORE_URL: http://{{ .Release.Name }}-ccd-data-store-api
         RUN_LD_ON_STARTUP: false
         ROLE_ASSIGNMENT_DB_HOST: sptribs-preview.postgres.database.azure.com
         ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
-      keyVaults:
-        am:
-          secrets:
-            - name: app-insights-connection-string
-              alias: app-insights-connection-string
+        ROLE_ASSIGNMENT_DB_USERNAME: ${POSTGRES_USERNAME}
+        ROLE_ASSIGNMENT_DB_PASSWORD: ${POSTGRES_PASSWORD}
 
   ccd-definition-store-api:
     java:
@@ -174,11 +171,8 @@ ccd:
         IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
-#      keyVaults:
-#        ccd:
-#          secrets:
-#            - name: app-insights-connection-string
-#              alias: app-insights-connection-string
+        DEFINITION_STORE_DB_USERNAME: ${POSTGRES_USERNAME}
+        DEFINITION_STORE_DB_PASSWORD: ${POSTGRES_PASSWORD}
       ingressHost: ccd-definition-store-${SERVICE_FQDN}
       autoscaling:
         enabled: false
@@ -192,12 +186,10 @@ ccd:
       imagePullPolicy: Always
       enviroment:
         USER_PROFILE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
+        USER_PROFILE_DB_NAME: "pr-${CHANGE_ID}-user-profile"
+        USER_PROFILE_DB_USERNAME: ${POSTGRES_USERNAME}
+        USER_PROFILE_DB_PASSWORD: ${POSTGRES_PASSWORD}
       ingressHost: ccd-user-profile-api-${SERVICE_FQDN}
-#      keyVaults:
-#        ccd:
-#          secrets:
-#            - name: app-insights-connection-string
-#              alias: app-insights-connection-string
 
   ccd-admin-web:
     nodejs:
@@ -220,8 +212,8 @@ ccd:
         - st_super@mailinator.com|ST_CIC|CIC|Submitted
       userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
       userProfileDatabasePort: 5432
-      userProfileDatabaseUser: hmcts
-      userProfileDatabasePassword: hmcts
+      userProfileDatabaseUser: ${POSTGRES_USERNAME}
+      userProfileDatabasePassword: ${POSTGRES_PASSWORD}
 #      userProfileDatabaseUser: ${CCD_USER_PROFILE_DB_USERNAME_PREVIEW}
 #      userProfileDatabasePassword: ${CCD_USER_PROFILE_DB_PASSWORD_PREVIEW}
       userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
@@ -556,7 +548,7 @@ em-stitching:
   java:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-em-stitching
-    image: hmctspublic.azurecr.io/em/stitching:latest
+    image: ${POSTGRES_USERNAME}public.azurecr.io/em/stitching:latest
     ingressHost: em-stitching-${SERVICE_FQDN}
     environment:
       IDAM_API_BASE_URI: https://idam-api.aat.platform.hmcts.net
@@ -568,7 +560,7 @@ em-stitching:
       SPRING_DATASOURCE_NAME: "pr-${CHANGE_ID}-emstitch"
       SPRING_DATASOURCE_OPTIONS: "?ssl=disable"
       SPRING_DATASOURCE_PORT: 5432
-      SPRING_DATASOURCE_USERNAME: hmcts
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USERNAME
       ENABLE_DB_MIGRATE: true
       RUN_DB_MIGRATION_ON_STARTUP: true
       FLYWAY_POSTGRESQL_TRANSACTIONAL_LOCK: false
