--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -68,7 +68,7 @@ ccd:
 #    ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
 #    postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
 #    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
-    postgresUsername: ${POSTGRES_USERNAME}
+    postgresUsername: hmcts
     postgresHostname: "sptribs-preview.postgres.database.azure.com"
     postgresSecret: postgres
     databaseNamePrefix: "pr-${CHANGE_ID}-"
@@ -95,8 +95,8 @@ ccd:
 #        DATA_STORE_DB_USERNAME: ${CCD_DATA_STORE_DB_USERNAME_PREVIEW}
 #        DATA_STORE_DB_PASSWORD: ${CCD_DATA_STORE_DB_PASSWORD_PREVIEW}
         DATA_STORE_DB_HOST: sptribs-preview.postgres.database.azure.com
-        DATA_STORE_DB_USERNAME: ${POSTGRES_USERNAME}
         DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
+        DATA_STORE_DB_USERNAME: hmcts
         DATA_STORE_IDAM_KEY: ${DATA_STORE_S2S_KEY}
         DATA_STORE_DEFAULT_LOG_LEVEL: info
         LOG_CALLBACK_DETAILS: "*"
@@ -155,11 +155,15 @@ ccd:
       environment:
         CCD_DATA_STORE_URL: http://{{ .Release.Name }}-ccd-data-store-api
         RUN_LD_ON_STARTUP: false
-        ROLE_ASSIGNMENT_DB_HOST: sptribs-preview.postgres.database.azure.com
+        ROLE_ASSIGNMENT_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
         ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
-        ROLE_ASSIGNMENT_DB_USERNAME: ${POSTGRES_USERNAME}
-        ROLE_ASSIGNMENT_DB_PASSWORD: ${POSTGRES_PASSWORD}
+        ROLE_ASSIGNMENT_DB_USERNAME: hmcts
+      secret:
+        ROLE_ASSIGNMENT_DB_PASSWORD:
+          secretRef: postgres
+          key: PASSWORD
+          disabled: false
 
   ccd-definition-store-api:
     java:
