--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -175,8 +175,12 @@ ccd:
         IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
-        DEFINITION_STORE_DB_USERNAME: ${POSTGRES_USERNAME}
-        DEFINITION_STORE_DB_PASSWORD: ${POSTGRES_PASSWORD}
+        DEFINITION_STORE_DB_USERNAME: hmcts
+      secret:
+        DEFINITION_STORE_DB_PASSWORD:
+          secretRef: postgres
+          key: PASSWORD
+          disabled: false
       ingressHost: ccd-definition-store-${SERVICE_FQDN}
       autoscaling:
         enabled: false
@@ -191,9 +195,13 @@ ccd:
       enviroment:
         USER_PROFILE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
         USER_PROFILE_DB_NAME: "pr-${CHANGE_ID}-user-profile"
-        USER_PROFILE_DB_USERNAME: ${POSTGRES_USERNAME}
-        USER_PROFILE_DB_PASSWORD: ${POSTGRES_PASSWORD}
+        USER_PROFILE_DB_USERNAME: hmcts
       ingressHost: ccd-user-profile-api-${SERVICE_FQDN}
+      secret:
+        USER_PROFILE_DB_PASSWORD:
+          secretRef: postgres
+          key: PASSWORD
+          disabled: false
 
   ccd-admin-web:
     nodejs:
@@ -216,11 +224,15 @@ ccd:
         - st_super@mailinator.com|ST_CIC|CIC|Submitted
       userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
       userProfileDatabasePort: 5432
-      userProfileDatabaseUser: ${POSTGRES_USERNAME}
-      userProfileDatabasePassword: ${POSTGRES_PASSWORD}
+      userProfileDatabaseUser: hmcts
 #      userProfileDatabaseUser: ${CCD_USER_PROFILE_DB_USERNAME_PREVIEW}
 #      userProfileDatabasePassword: ${CCD_USER_PROFILE_DB_PASSWORD_PREVIEW}
       userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
+      secret:
+        userProfileDatabasePassword:
+          secretRef: postgres
+          key: PASSWORD
+          disabled: false
 
 #  ccd-user-profile-importer:
 #    enabled: true
@@ -552,7 +564,7 @@ em-stitching:
   java:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-em-stitching
-    image: ${POSTGRES_USERNAME}public.azurecr.io/em/stitching:latest
+    image: hmctspublic.azurecr.io/em/stitching:latest
     ingressHost: em-stitching-${SERVICE_FQDN}
     environment:
       IDAM_API_BASE_URI: https://idam-api.aat.platform.hmcts.net
@@ -564,7 +576,7 @@ em-stitching:
       SPRING_DATASOURCE_NAME: "pr-${CHANGE_ID}-emstitch"
       SPRING_DATASOURCE_OPTIONS: "?ssl=disable"
       SPRING_DATASOURCE_PORT: 5432
-      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USERNAME
+      SPRING_DATASOURCE_USERNAME: hmcts
       ENABLE_DB_MIGRATE: true
       RUN_DB_MIGRATION_ON_STARTUP: true
       FLYWAY_POSTGRESQL_TRANSACTIONAL_LOCK: false
