--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -159,7 +159,7 @@ ccd:
         ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
         ROLE_ASSIGNMENT_DB_USERNAME: hmcts
-      secret:
+      secrets:
         ROLE_ASSIGNMENT_DB_PASSWORD:
           secretRef: postgres
           key: PASSWORD
@@ -176,7 +176,7 @@ ccd:
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
         DEFINITION_STORE_DB_USERNAME: hmcts
-      secret:
+      secrets:
         DEFINITION_STORE_DB_PASSWORD:
           secretRef: postgres
           key: PASSWORD
@@ -197,7 +197,7 @@ ccd:
         USER_PROFILE_DB_NAME: "pr-${CHANGE_ID}-user-profile"
         USER_PROFILE_DB_USERNAME: hmcts
       ingressHost: ccd-user-profile-api-${SERVICE_FQDN}
-      secret:
+      secrets:
         USER_PROFILE_DB_PASSWORD:
           secretRef: postgres
           key: PASSWORD
