[DTSSTCI-578] Add postgresql chart and init flexible server dbs

--- a/charts/sptribs-case-api/Chart.yaml
+++ b/charts/sptribs-case-api/Chart.yaml
@@ -43,3 +43,7 @@ dependencies:
     version: 1.0.55
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: em-stitching.enabled
+  - name: postgresql
+    version: ~1.0.2
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: postgresql.enabled
