--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -13,7 +13,7 @@ java:
     POSTGRES_HOST: sptribs-preview.postgres.database.azure.com
     POSTGRES_NAME: sptribs-case-api
     POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
-    POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
+#    POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
 
   keyVaults:
@@ -180,7 +180,7 @@ ccd:
 
   am-role-assignment-service:
     java:
-      disableKeyVaults: true
+#      disableKeyVaults: true
       environment:
         CCD_DATA_STORE_URL: http://{{ .Release.Name }}-ccd-data-store-api
         RUN_LD_ON_STARTUP: false
@@ -193,6 +193,11 @@ ccd:
         secretRef: postgres
         key: PASSWORD
         disabled: false
+    keyVaults:
+      am:
+        secrets:
+          - name: app-insights-connection-string
+            alias: app-insights-connection-string
 
   ccd-definition-store-api:
     java:
