--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -13,7 +13,7 @@ java:
     POSTGRES_HOST: sptribs-preview.postgres.database.azure.com
     POSTGRES_NAME: sptribs-case-api
     POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
-#    POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
+    POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
 
   keyVaults:
@@ -56,13 +56,8 @@ java:
         - name: em-spring-datasource-password-preview
           alias: EM_SPRING_DATASOURCE_PASSWORD_PREVIEW
 
-global:
-  postgresHostname: "sptribs-preview.postgres.database.azure.com"
-  postgresSecret: postgres
-  databaseNamePrefix: "pr-${CHANGE_ID}-"
-
 #  postgresql:
-#    enabled: true
+#    enabled: false
 #    image:
 #      tag: '11.6.0'
 #    primary:
@@ -83,6 +78,11 @@ global:
 #    auth:
 #      username: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
 #      password: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
+
+global:
+  postgresHostname: "sptribs-preview.postgres.database.azure.com"
+  postgresSecret: postgres
+  databaseNamePrefix: "pr-${CHANGE_ID}-"
 
 ccd:
   ccd:
@@ -187,17 +187,18 @@ ccd:
         ROLE_ASSIGNMENT_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
         ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
-        ROLE_ASSIGNMENT_DB_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
-      secrets:
-        ROLE_ASSIGNMENT_DB_PASSWORD:
-          secretRef: postgres
-          key: PASSWORD
-          disabled: true
-    keyVaults:
-      am:
-        secrets:
-          - name: app-insights-connection-string
-            alias: app-insights-connection-string
+        ROLE_ASSIGNMENT_DB_USERNAME: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
+        ROLE_ASSIGNMENT_DB_PASSWORD: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
+#      secrets:
+#        ROLE_ASSIGNMENT_DB_PASSWORD:
+#          secretRef: postgres
+#          key: PASSWORD
+#          disabled: true
+      keyVaults:
+        am:
+          secrets:
+            - name: app-insights-connection-string
+              alias: app-insights-connection-string
 
   ccd-definition-store-api:
     java:
