--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -12,7 +12,7 @@ java:
     CITIZEN_UPDATE_CASE_STATE_ENABLED: true
     POSTGRES_HOST: sptribs-preview.postgres.database.azure.com
     POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
-    POSTGRES_USERNAME: hmcts
+    POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
 
   keyVaults:
@@ -158,13 +158,12 @@ ccd:
         ROLE_ASSIGNMENT_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
         ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
-        ROLE_ASSIGNMENT_DB_USERNAME: hmcts
+        ROLE_ASSIGNMENT_DB_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
       secrets:
         ROLE_ASSIGNMENT_DB_PASSWORD:
           secretRef: postgres
           key: PASSWORD
           disabled: false
-      keyVaults: [ ]
 
   ccd-definition-store-api:
     java:
