[DTSSTCI-578] Update am-role-assignment-service username to CCD_GLOBAL

--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -193,7 +193,7 @@ ccd:
         ROLE_ASSIGNMENT_DB_PASSWORD:
           secretRef: postgres
           key: PASSWORD
-          disabled: true
+          disabled: false
       keyVaults:
         am:
           secrets:
