--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -10,10 +10,10 @@ java:
     CASE_DOCUMENT_AM_BASEURL: http://${SERVICE_NAME}-ccd-case-document-am-api
     BUNDLING_API_URL: https://em-ccdorc-${SERVICE_FQDN}
     CITIZEN_UPDATE_CASE_STATE_ENABLED: true
-    POSTGRES_HOST: sptribs-preview.postgres.database.azure.com
-    POSTGRES_NAME: sptribs-case-api
+    POSTGRES_HOST: '{{ tpl .Values.global.postgresHostname $}}'
+    POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
     POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
-    POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
+#    POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
 
   keyVaults:
@@ -55,6 +55,11 @@ java:
           alias: EM_SPRING_DATASOURCE_USERNAME_PREVIEW
         - name: em-spring-datasource-password-preview
           alias: EM_SPRING_DATASOURCE_PASSWORD_PREVIEW
+  secrets:
+    POSTGRES_PASSWORD:
+      secretRef: postgres
+      key: PASSWORD
+      disabled: false
 
 #  postgresql:
 #    enabled: false
