EXUI-2025: To test ExUI changes

--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -438,7 +438,7 @@ xui-webapp:
   nodejs:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-xui-webapp
-    image: hmctspublic.azurecr.io/xui/webapp:latest
+    image: hmctspublic.azurecr.io/xui/webapp:pr-3732-38bd341-20240618124046
     ingressHost: xui-${SERVICE_FQDN}
     devcpuRequests: 250m
     devmemoryRequests: 1024Mi
