--- a/charts/sptribs-case-api/values.yaml
+++ b/charts/sptribs-case-api/values.yaml
@@ -30,6 +30,12 @@ em-ccdorc:
 em-stitching:
   enabled: false
 
+wa:
+  enabled: false
+
+servicebus:
+  enabled: false
+
 java:
   applicationPort: 4013
   image: 'hmctspublic.azurecr.io/sptribs/case-api:latest'
