DTSSTCI-73: Add Welsh template to config and determine whether to send English or Welsh email

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,6 +57,7 @@ uk:
         templatesCIC:
           APPLICATION_NEW_ORDER_ISSUED: 'e451a469-e61d-4daf-95c3-e405448ececf'
           APPLICATION_RECEIVED: '5385bfc6-eb33-41f6-ad2b-590a4f427606'
+          APPLICATION_RECEIVED_CY: '2a434482-a070-457c-935d-12b49f2ac223'
           CASE_REINSTATED_EMAIL: '1f41595f-1ab8-4e41-a240-026c61ecd852'
           CASE_REINSTATED_POST: '313e8992-8538-4485-a461-a244cc893bb3'
           CASE_STAYED_EMAIL: 'ce3e6749-0400-47fd-aa96-33e348c860ad'
