revert importer change

--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -187,19 +187,20 @@ ccd:
         IDAM_ADMIN_WEB_SERVICE_KEY: ${ADMIN_S2S_KEY}
         IDAM_OAUTH2_AW_CLIENT_SECRET: ${ADMIN_WEB_IDAM_SECRET}
 
-  ccd-user-profile-importer:
-    enabled: true
-    jurisdictions:
-      - ST_CIC
-    users:
-      - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
-      - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
-      - st_super@mailinator.com|ST_CIC|CIC|Submitted
-    userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
-    userProfileDatabasePort: 5432
-    userProfileDatabaseUser: hmcts
-    userProfileDatabasePassword: hmcts
-    userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
+  importer:
+    userprofile:
+      enabled: true
+      jurisdictions:
+        - ST_CIC
+      users:
+        - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
+        - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
+        - st_super@mailinator.com|ST_CIC|CIC|Submitted
+      userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
+      userProfileDatabasePort: 5432
+      userProfileDatabaseUser: hmcts
+      userProfileDatabasePassword: hmcts
+      userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
   
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
